--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,12 @@ server.port=9000
 spring.datasource.url=jdbc:mysql://localhost:3306/managertourvietnam
 spring.datasource.username=root
 spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=update
+#không thay ??i c?u c?a các b?ng nh?ng v?n thay ??i d? li?u
+spring.jpa.hibernate.ddl-auto=none
+
+
+
+#// t? c?p nhâp l?i b?ng m?i
+#spring.jpa.hibernate.ddl-auto=update
+#// xóa các b?ng trong c? s? d? li?u
+#spring.jpa.hibernate.ddl-auto=create-drop
