--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=ManagerTourVietNam
 server.port=9000
 spring.datasource.url=jdbc:mysql://localhost:3306/managertourvietnam
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=kiet147895
 #không thay ??i c?u c?a các b?ng nh?ng v?n thay ??i d? li?u
 spring.jpa.hibernate.ddl-auto=none
 
