--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=managertourvietnam
 server.port=9000
-spring.datasource.url=jdbc:mysql://localhost:3306/managertourvietnam123
+spring.datasource.url=jdbc:mysql://localhost:3306/managertourvietnam
 spring.datasource.username=root
 
 
