--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=managertourvietnam
 server.port=9000
 spring.datasource.url=jdbc:mysql://localhost:3306/managertourvietnam123New
 spring.datasource.username=root
-
+google.client-id=677635945499-0btdlbiqiic8av0ppbds98uupk7vhg6r.apps.googleusercontent.com
 
 
 spring.datasource.password=
