--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,16 @@ build/
 .vscode/
 src/main/resources/application.properties
 src/main/resources/application.properties
+
+spring.application.name=managertourvietnam
+server.port=9000
+spring.datasource.url=jdbc:mysql://localhost:3306/managertourvietnam123New
+
+spring.datasource.username=root
+google.client-id=194956155091-rvbqge5cnpv1u0mdqimkssankmvpmuu5.apps.googleusercontent.com
+spring.jpa.open-in-view=false
+
+#// t? c?p nhï¿½p l?i b?ng m?i
+spring.jpa.hibernate.ddl-auto=update
+#// xï¿½a cï¿½c b?ng trong c? s? d? li?u
+#spring.jpa.hibernate.ddl-auto=create-drop
