--- a/pom.xml
+++ b/pom.xml
@@ -13,23 +13,54 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>ManagerTourVietNam</name>
 	<description>Demo project for Spring Boot</description>
-	<url/>
+	<url>https://github.com/paypal/PayPal-Java-SDK.git</url>
 	<licenses>
-		<license/>
+		<license>
+			<name>PayPal SDK License</name>
+			<url>https://github.com/paypal/PayPal-Java-SDK/blob/master/LICENSE.txt</url>
+			<distribution>repo</distribution>
+		</license>
 	</licenses>
 	<developers>
 		<developer/>
 	</developers>
 	<scm>
-		<connection/>
 		<developerConnection/>
 		<tag/>
-		<url/>
+		<connection>scm:git:git://github.com/paypal/PayPal-Java-SDK.git</connection>
+		<url>https://github.com/paypal/PayPal-Java-SDK.git</url>
 	</scm>
 	<properties>
 		<java.version>21</java.version>
 	</properties>
+	<repositories>
+		<repository>
+			<id>paypal-sdk-repo</id>
+			<url>https://oss.sonatype.org/content/repositories/releases/</url>
+		</repository>
+		<repository>
+			<id>maven-central</id>
+			<url>https://repo.maven.apache.org/maven2</url>
+		</repository>
+		<repository>
+			<id>paypal-maven-repo</id>
+			<url>https://github.com/paypal/Checkout-SDK-java/packages</url>
+		</repository>
+		<repository>
+			<id>jcenter</id>
+			<url>https://jcenter.bintray.com/</url>
+		</repository>
+		<repository>
+			<id>paypal-maven-repo</id>
+			<url>https://dl.bintray.com/paypal/maven/</url>
+		</repository>
+	</repositories>
 	<dependencies>
+		<dependency>
+			<groupId>com.paypal.sdk</groupId>
+			<artifactId>rest-api-sdk</artifactId>
+			<version>1.14.0</version>
+		</dependency>
 		<!-- Google API Client -->
 		<dependency>
 			<groupId>com.google.api-client</groupId>
